syntax = "proto3";

option csharp_namespace = "VehicleService.GRPC";

service VehicleApi {
  rpc GetVehicleDetails (GetVehicleDetailsRequest) returns (VehicleDetailsResponse);
}

message GetVehicleDetailsRequest {
  string vehicle_id = 1;
}

message VehicleDetailsResponse {
  string id = 1;
  string model = 2;
  string price = 3;
  string currency = 4;
}
